# LogSpark

./: .gitignore  AgentMemory.md  README.md  Taskfile.yml  demo_logspark.py  mkdocs.yml  pyproject.toml  verify_width_logic.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-uv.yml  run-tests.yml
docs/: advanced.md  concepts.md  design-overview.md  development-workflows.md  environment.md  global-log-control.md  glossary.md  incremental-adoption.md  index.md  lifecycle.md  log_management.md  logging-policy.md  mkdocs.yml  output-modes.md  production-observability.md  quick-start.md  quickstart.md  reference.md  requirements.txt  tmp_log.md
docs/api/: handlers.md  log-manager.md  log-override.md  spark-logger.md  types.md
docs/overrides/assets/stylesheets/: mkdocstrings-sections.css
logspark/: LogOverrideDef.py  SparkLogManagerDef.py  SparkLoggerDef.py  __init__.py
logspark/Core/: LogOverride.py  SparkLogManager.py  SparkLogger.py  TempLogLevel.py  __init__.py
logspark/Filters/: DDTraceCorrelationFilter.py  DDTraceInjection.py  DDTraceInjectionFilter.py  PathNormalization.py  PathNormalizationFilter.py  TracebackPolicy.py  TracebackPolicyFilter.py  __init__.py
logspark/Formatters/: SparkBaseFormatter.py  SparkColorFormatter.py  SparkJsonFormatter.py  __init__.py
logspark/Formatters/Rich/: SparkRichFormatter.py  SparkRichLogRenderer.py
logspark/Handlers/: Json.py  JsonHandler.py  PreConfig.py  PreConfigHandler.py  SparkJSONHandler.py  SparkJsonHandler.py  SparkPreConfigHandler.py  SparkTerminalHandler.py  Terminal.py  TerminalHandler.py  __init__.py
logspark/Handlers/Rich/: RichHandler.py  SparkRichHandler.py  __init__.py
logspark/Hooks/: CustomLogRender.py  SparkRichHandler.py  __init__.py
logspark/Internal/Func/: __init__.py  configure_handler_traceback_policy.py  create_pre_config_handler.py  emit_console_warning.py  env.py  get_devnull.py  resolve_stacklevel.py  validate_configuration_parameters.py  validate_level.py
logspark/Internal/Hooks/: CustomLogRender.py  DDTraceCorrelationFilter.py  SparkRichHandler.py
logspark/Internal/State/: Env.py  LoggerConfig.py  SingletonClass.py  __init__.py
logspark/Types/: Exceptions.py  Options.py  Protocol.py  SparkRecordAttrs.py  __init__.py
logspark/_Internal/: SparkLogFilter.py  Types.py  __init__.py
logspark/_Internal/Func/: __init__.py  colorize.py  configure_handler_traceback_policy.py  emit_warning.py  generate_stdlib_format.py  get_devnull.py  get_handler_by_preset.py  is_color_compatible_terminal.py  resolve_stacklevel.py  resolve_stream.py  validate_configuration_parameters.py  validate_level.py  validate_timeformat.py
logspark/_Internal/Intergration/: CustomLogRender.py  SparkRichHandler.py
logspark/_Internal/State/: Env.py  LogManagerState.py  LoggerConfig.py  SingletonClass.py  __init__.py
logspark/typings/rich/: logging.pyi
tests/: conftest.py  test_env.py  test_error_handling.py  test_integration.py  test_lifecycle.py  test_log_manager.py  test_output_format.py  test_performance.py  test_remaining_properties.py  test_setup.py  test_stdlib_compliance.py
tests/configuration/: test_configuration_validation.py
tests/core/: test_color_compatibility.py  test_color_compatibility_stream_edge_cases.py  test_ddtrace_filter_handling.py  test_dependency_guards.py  test_env_rich_availability.py  test_environment.py  test_lifecycle.py  test_log_manager_state.py  test_log_manager_state_post_init.py  test_logger_config.py  test_logger_config_validation.py  test_override.py  test_spark_log_filter.py  test_spark_logger_preset_handling.py  test_stacklevel.py  test_stacklevel_calibration.py
tests/filters/: __init__.py  test_ddtrace_correlation_filter.py  test_ddtrace_filter.py  test_path_normalization_filter.py  test_traceback_consistency.py  test_traceback_policies.py
tests/formatters/: test_spark_base_formatter.py  test_spark_color_formatter.py  test_spark_json_formatter_exceptions.py  test_spark_rich_log_renderer.py
tests/functions/: test_singleton_class.py  test_validate_level.py
tests/handlers/: test_custom_log_render.py  test_handler_parity.py  test_json_handler.py  test_pre_config_handler.py  test_spark_rich_handler.py  test_spark_rich_handler_path_edge_cases.py  test_terminal_handler_no_color.py  test_terminal_handler_traceback_exception.py  test_terminal_handler_warnings.py
tests/manager/: __init__.py  test_adoption.py  test_release.py  test_unify.py
tests/performance/: test_performance.py
tests/rich/: test_custom_log_render.py
typings/ddtrace/: trace.pyi
typings/ddtrace/_trace/: span.pyi  tracer.pyi
typings/pythonjsonlogger/: core.pyi  json.pyi
typings/rich/: color.pyi  color_triplet.pyi  console.pyi  logging.pyi  segment.pyi  style.pyi  table.pyi
